...
    }

    private let items = [
        Item(tab: .scripts, icon: .scripts, title: "Scripts"),
        Item(tab: .takes, icon: .takes, title: "Takes"),
        Item(tab: .record, icon: nil, title: "Record"),
        Item(tab: .profile, icon: .profile, title: "Profile"),
        Item(tab: .settings, icon: .settings, title: "Settings"),
    ]

    var body: some View {
        HStack(spacing: 0) {
            ForEach(items) { item in
...
